--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,11 +1,11 @@
 .events {
   padding: 70px 20px;
 
-  @media (min-width: 600px) {
+  @media (min-width: 650px) {
     padding: 90px 34px;
   }
 
-  @media (min-width: 900px) {
+  @media (min-width: 950px) {
     padding: 300px 55px 0;
   }
 
@@ -15,19 +15,20 @@
     font-size: 36px;
     font-weight: 700;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       text-align: left;
       font-size: 48px;
     }
   }
 
   &__article {
-    @media (min-width: 900px) {
+    @media (min-width: 1280px) {
       display: flex;
       flex-direction: row-reverse;
-      justify-content: space-between;
+      justify-content: start;
       align-items: center;
       flex-wrap: wrap;
+      column-gap: 130px;
 
       &:nth-child(2n) {
         flex-direction: row;
@@ -43,11 +44,11 @@
     object-fit: cover;
     object-position: center;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       height: 520px;
     }
 
-    @media (min-width: 900px) {
+    @media (min-width: 1028px) {
       width: 670px;
       height: 520px;
       padding-bottom: 50px;
@@ -55,7 +56,6 @@
   }
 
   &__wrapper {
-    min-width: 370px;
     max-width: 370px;
   }
 
@@ -66,7 +66,7 @@
     align-content: center;
     font-size: 16px;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       margin: 30px 0;
       font-size: 14px;
     }
@@ -92,7 +92,7 @@
     line-height: 100%;
     font-weight: 400;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       font-size: 36px;
       padding-bottom: 15px;
     }
