--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,12 +3,13 @@
 
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
 
-  @media (min-width: 600px) {
+  @media (min-width: 650px) {
     padding: 50px 34px 0;
   }
 
-  @media (min-width: 900px) {
+  @media (min-width: 1028px) {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -21,14 +22,10 @@
     grid-template-areas: "links links"
       "schedule contacts";
 
-    @media (min-width: 600px) {
-      grid-template-columns: 70px 150px 180px;
+    @media (min-width: 650px) {
+      grid-template-columns: 70px 150px 160px;
       grid-column-gap: 50px;
       grid-template-areas: "links schedule contacts";
-    }
-
-    @media (min-width: 900px) {
-      max-width: 50%;
     }
   }
 
@@ -41,7 +38,7 @@
     justify-content: space-between;
     align-items: center;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       flex-direction: column;
     }
   }
@@ -110,7 +107,7 @@
     font-size: 14px;
     line-height: 21px;
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
       margin-right: 60px;
     }
   }
@@ -147,7 +144,7 @@
     background-repeat: no-repeat;
     background-position: center;
 
-    @media (min-width: 900px) {
+    @media (min-width: 1028px) {
       display: none;
     }
   }
@@ -157,16 +154,16 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    width: 100%;
     max-width: 460px;
+    width: 100%;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       margin-left: 120px;
       justify-content: start;
     }
 
     @media (min-width: 1028px) {
-      margin: 0;
+      margin-left: 0;
       padding-left: 60px;
     }
 
@@ -210,14 +207,14 @@
     font-weight: 400;
     font-size: 14px;
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
       padding: 0 0 20px;
     }
   }
 
   &__copyright {
     padding: 20px 0;
-    width: 100vw;
+    width: 90%;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 300;
@@ -226,20 +223,21 @@
 
     text-align: center;
 
-    @media (min-width: 600px) {
-      padding: 34px 0;
-
+    @media (min-width: 650px) {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
+
+      padding: 34px 0;
     }
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
       padding: 80px 55px 34px;
     }
   }
 
   &__copyright-text {
-    @media (max-width: 600px) {
+    @media (max-width: 650px) {
       padding-bottom: 14px;
     }
   }
