--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,44 +1,43 @@
 .header {
+  position: relative;
+  height: 515px;
+
   &__photo {
-    position: absolute;
     z-index: -1;
+    position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
+
     height: 300px;
     width: 100%;
     overflow: hidden;
     object-fit: cover;
 
-    @media (min-width: 600px) {
-      left: unset;
-      right: 0;
-      height: 384px;
+    @media (min-width: 650px) {
       width: 60%;
+      height: 384px;
     }
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
       top: 0;
-      right: 0;
       height: 655px;
       object-position: center;
     }
   }
 
   &__content-wrapper {
-    width: 100%;
     padding: 9px 20px;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       padding: 15px 34px;
     }
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
       padding: 15px 55px;
     }
   }
 
   &__top {
-    position: relative;
     display: flex;
     align-items: center;
 
@@ -46,6 +45,7 @@
   }
 
   &__nav-toggler {
+    z-index: 1;
     height: 24px;
     width: 24px;
     padding: 6px 3px;
@@ -74,27 +74,35 @@
   }
 
   &__bottom {
-    text-transform: uppercase;
+    position: absolute;
+    left: 0;
+    top: 340px;
+    width: 100%;
+    align-self: start;
+
     display: flex;
     flex-direction: column;
 
-    @media (min-width: 900px) {
-      padding: 148px 0 0 200px;
+    text-transform: uppercase;
+
+    @media (min-width: 650px) {
+      width: 360px;
+      top: 135px;
+      left: 13%;
+    }
+
+    @media (min-width: 950px) {
+      top: 235px;
+      width: 460px;
     }
   }
 
   &__title {
-    margin-top: 250px;
-
     text-align: center;
     font-weight: 700;
     line-height: 100%;
 
-    @media (min-width: 600px) {
-      margin-top: 80px;
-
-      width: 360px;
-
+    @media (min-width: 650px) {
       text-align: left;
       font-size: 55px;
 
@@ -104,7 +112,7 @@
       }
     }
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
       margin-top: 0;
       font-size: 72px;
     }
@@ -128,13 +136,13 @@
 
     border: 1px solid $c-gark-green;
 
-    @media (min-width: 600px) {
+    @media (min-width: 650px) {
       margin: 40px 0 0;
       width: 150px;
       padding-left: 45px;
     }
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
       margin-top: 80px;
       height: 70px;
       line-height: 70px;
@@ -152,11 +160,11 @@
 
       background-color: $c-gark-green;
 
-      @media (min-width: 600px) {
+      @media (min-width: 650px) {
         left: 149px;
       }
 
-      @media (min-width: 900px) {
+      @media (min-width: 950px) {
         width: 70px;
         height: 70px;
       }
@@ -222,14 +230,14 @@
   &__right {
     display: none;
 
-    @media (min-width: 900px) {
+    @media (min-width: 950px) {
+      position: absolute;
+      top: 560px;
       display: block;
       color: #687480;
       font-size: 14px;
-      position: relative;
       transform: rotate(-90deg);
       transform-origin: top left;
-      margin-bottom: 71px;
 
       &::before {
         content: "";
