finally fix header

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,17 +4,12 @@
 
   &__photo {
     z-index: -1;
-    position: absolute;
-    top: 0;
-    right: 0;
-
     height: 300px;
     width: 100%;
     overflow: hidden;
     object-fit: cover;
 
     @media (min-width: 650px) {
-      width: 60%;
       height: 384px;
     }
 
@@ -59,6 +54,7 @@
   }
 
   &__logo {
+    z-index: 1;
     margin: 0 auto;
     position: absolute;
     left: 0;
@@ -73,36 +69,27 @@
     line-height: 100%;
   }
 
-  &__bottom {
+  &__image-wrapper {
     position: absolute;
-    left: 0;
-    top: 340px;
-    width: 100%;
-    align-self: start;
-
-    display: flex;
-    flex-direction: column;
-
-    text-transform: uppercase;
+    top: 0;
+    right: 0;
 
     @media (min-width: 650px) {
-      width: 360px;
-      top: 135px;
-      left: 13%;
-    }
-
-    @media (min-width: 950px) {
-      top: 235px;
-      width: 460px;
+      width: 60%;
     }
   }
 
   &__title {
+    position: absolute;
+    top: 320px;
     text-align: center;
     font-weight: 700;
     line-height: 100%;
 
     @media (min-width: 650px) {
+      width: 360px;
+      top: 135px;
+      left: -230px;
       text-align: left;
       font-size: 55px;
 
@@ -113,15 +100,22 @@
     }
 
     @media (min-width: 950px) {
+      top: 235px;
+      left: -299px;
+      width: 460px;
       margin-top: 0;
       font-size: 72px;
     }
   }
 
   &__ticket-buy-link {
+    position: absolute;
+    top: 430px;
+    left: 0;
+    right: 0;
+
     margin: 20px auto 0;
     padding-left: 80px;
-    position: relative;
     display: block;
     width: 280px;
     height: 50px;
@@ -137,12 +131,16 @@
     border: 1px solid $c-gark-green;
 
     @media (min-width: 650px) {
+      top: 290px;
+      left: -225px;
       margin: 40px 0 0;
       width: 150px;
       padding-left: 45px;
     }
 
     @media (min-width: 950px) {
+      top: 470px;
+      left: -295px;
       margin-top: 80px;
       height: 70px;
       line-height: 70px;
