--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -73,6 +73,7 @@
   }
 
   &__name {
+    text-transform: uppercase;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     color: #687480;
