done. waiting for review

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -9,6 +9,15 @@
     padding: 300px 55px 0;
   }
 
+  @media (min-width: 1280px) {
+    margin: 0 auto;
+    max-width: 1280px;
+  }
+
+  @media (min-width: 1570px) {
+    max-width: 1570px;
+  }
+
   &__title {
     margin-top: 10px;
     text-align: center;
@@ -29,6 +38,11 @@
       align-items: center;
       flex-wrap: wrap;
       column-gap: 130px;
+      transition-duration: 400ms;
+
+      &:hover {
+        transform: translateX(15px);
+      }
 
       &:nth-child(2n) {
         flex-direction: row;
@@ -52,6 +66,11 @@
       width: 670px;
       height: 520px;
       padding-bottom: 50px;
+    }
+
+    @media (min-width: 1570px) {
+      width: 870px;
+      height: 570px;
     }
   }
 
