--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -38,6 +38,11 @@
     width: 278px;
     background: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+    transition-duration: 400ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @media (min-width: 650px) {
       padding: 45px 100px;
