--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -64,8 +64,13 @@
 
     width: 233px;
     height: 50px;
-    border: none;
+    outline: none;
+    border: 2px solid transparent;
     border-radius: 0;
+
+    &:focus {
+      border: 2px solid #f14a27;
+    }
 
     @media (min-width: 650px) {
       padding: 28px 31px;
@@ -87,6 +92,10 @@
     background-image: url(../images/side-greater-black.svg);
     background-repeat: no-repeat;
     background-position: center;
+
+    &:hover {
+      background-color: $c-grey;
+    }
 
     @media (min-width: 650px) {
       width: 70px;
