--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -15,6 +15,15 @@
     justify-content: space-evenly;
   }
 
+  @media (min-width: 1280px) {
+    margin: 0 auto;
+    max-width: 1280px;
+  }
+
+  @media (min-width: 1570px) {
+    max-width: 1570px;
+  }
+
   &__info {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -56,6 +65,11 @@
 
     text-decoration: none;
     color: $c-black;
+    transition-duration: 400ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__facebook {
@@ -65,6 +79,11 @@
     background-image: url(../images/Facebook.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition-duration: 400ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__instagram {
@@ -73,6 +92,11 @@
     background-image: url(../images/Instagram.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition-duration: 400ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__schedule {
@@ -143,6 +167,11 @@
     background-image: url(../images/arrow-up-darkgreen.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition-duration: 400ms;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     @media (min-width: 1028px) {
       display: none;
