--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -9,6 +9,15 @@
     padding: 100px 55px;
   }
 
+  @media (min-width: 1280px) {
+    margin: 0 auto;
+    max-width: 1280px;
+  }
+
+  @media (min-width: 1570px) {
+    max-width: 1570px;
+  }
+
   &__title {
     padding-bottom: 40px;
     text-align: center;
@@ -51,6 +60,12 @@
       grid-template-areas: "one two two"
         "three three four";
     }
+
+    @media (min-width: 1570px) {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-areas: "one two two five"
+        "three three four six";
+    }
   }
 
   @media (max-width: 900px) {
@@ -71,6 +86,11 @@
     @media (min-width: 650px) {
       height: 543px;
       width: 340px;
+      transition-duration: 400ms;
+
+      &:hover {
+        transform: scale(1.04);
+      }
     }
 
     @media (min-width: 950px) {
@@ -92,6 +112,24 @@
 
       &--4 {
         grid-area: four;
+      }
+
+      &--5 {
+        display: none;
+        grid-area: five;
+
+        @media (min-width: 1570px) {
+          display: block;
+        }
+      }
+
+      &--6 {
+        display: none;
+        grid-area: six;
+
+        @media (min-width: 1570px) {
+          display: block;
+        }
       }
     }
   }
