--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -30,6 +30,15 @@
     @media (min-width: 950px) {
       padding: 15px 55px;
     }
+
+    @media (min-width: 1280px) {
+      margin: 0 auto;
+      max-width: 1280px;
+    }
+
+    @media (min-width: 1570px) {
+      max-width: 1570px;
+    }
   }
 
   &__top {
@@ -40,7 +49,7 @@
   }
 
   &__nav-toggler {
-    z-index: 1;
+    z-index: 2;
     height: 24px;
     width: 24px;
     padding: 6px 3px;
@@ -50,6 +59,7 @@
 
     &:hover {
       cursor: pointer;
+      background-image: url(../images/menu-hover.svg);
     }
   }
 
@@ -67,6 +77,11 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 100%;
+    transition-duration: 400ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__image-wrapper {
@@ -182,15 +197,21 @@
     height: 100vh;
     width: 100vw;
     z-index: 1;
+    padding-top: 50px;
 
     position: fixed;
     top: 0;
     left: 0;
 
     background-color: #fff;
+    border-right: 1px solid $c-black;
 
     transform: translateX(-100%);
     transition: transform 0ms ease-in;
+
+    @media (min-width: 950px) {
+      width: 25%;
+    }
 
     &--active {
       transform: translateX(0);
@@ -200,6 +221,15 @@
 
   &__nav-list {
     list-style: none;
+    padding-left: 20px;
+
+    @media (min-width: 650px) {
+      padding-left: 34px;
+    }
+
+    @media (min-width: 950px) {
+      padding-left: 55px;
+    }
   }
 
   &__nav-link {
@@ -207,21 +237,15 @@
     padding: 24px 0 8px;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 12px;
     font-weight: 700;
     letter-spacing: 2px;
-    color: $c-gark-green;
+    color: $c-black;
     border: 1px solid transparent;
     transition-duration: 400ms;
 
-    &:last-of-type {
-      padding-top: 32px;
-      font-size: 12px;
-      line-height: 16px;
-    }
-
     &:hover {
-      border-bottom: 1px solid $c-gark-green;
+      border-bottom: 1px solid $c-black;
     }
   }
 
