--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -9,7 +9,7 @@
 
   &__title {
     margin-bottom: 50px;
-  
+
     @include screenMob {
       margin-bottom: 40px;
       font-size: 36px;
@@ -40,6 +40,7 @@
 
   &__picture {
     position: relative;
+    transition: transform 1s;
 
     @include screenMed {
       height: 543px;
@@ -88,7 +89,7 @@
 
   &__picture--6 {
     grid-column: 4;
-    
+
     @media screen and (max-width: 1680px) {
       display: none;
     }
@@ -97,4 +98,8 @@
       display: block;
     }
   }
+}
+
+.gallery__picture:hover {
+  transform: scale(1.05);
 }
