--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -49,7 +49,7 @@
       font-size: 36px;
     }
   }
-  
+
   &__item {
     margin-bottom: 100px;
     display: flex;
@@ -72,6 +72,7 @@
     object-fit: cover;
     width: 55%;
     height: 520px;
+    transition: transform 1s;
 
     @include screenMed {
       width: 100%;
@@ -81,7 +82,7 @@
       height: 75vw;
       width: 100%;
     }
-    
+
   }
 
   &__descr {
@@ -101,4 +102,9 @@
   &__descr--rev {
     margin-right: 130px;
   }
+}
+
+.events__picture:hover {
+
+  transform: scale(1.05);
 }
