--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -50,7 +50,6 @@
 
   &__network-icons {
     height: 24px;
-    
 
     @include  screenMobMin {
       display: flex;
@@ -191,4 +190,8 @@
       justify-content: space-between;
     }
   }
+}
+
+.footer__map {
+  @include linkHover;
 }
