--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -15,7 +15,7 @@
   }
 
   &__text {
-    margin-bottom: 50px;
+    margin: 20px 0 50px;
     max-width: 70%;
     text-align: center;
     @extend %IBM-subscr;
@@ -49,7 +49,7 @@
     }
 
     &__text {
-      margin-bottom: 66px;
+      margin: 20px 0 66px;
     }
 
     &__input {
