--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -12,7 +12,7 @@
   @media (min-width: 1028px) {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
   }
 
   @media (min-width: 1280px) {
@@ -32,7 +32,8 @@
       "schedule contacts";
 
     @media (min-width: 650px) {
-      grid-template-columns: 70px 150px 160px;
+      max-width: 50%;
+      grid-template-columns: 70px 150px 1fr;
       grid-column-gap: 50px;
       grid-template-areas: "links schedule contacts";
     }
@@ -68,7 +69,7 @@
     transition-duration: 400ms;
 
     &:hover {
-      transform: scale(1.1);
+      color: $c-gark-green;
     }
   }
 
@@ -150,6 +151,12 @@
     text-decoration: none;
     font-style: normal;
     color: $c-black;
+    transition-duration: 400ms;
+
+    &:hover {
+      color: $c-gark-green;
+      text-decoration: underline;
+    }
   }
 
   &__start-page-link {
@@ -235,6 +242,12 @@
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 14px;
+    transition-duration: 400ms;
+
+    &:hover {
+      color: $c-gark-green;
+      text-decoration: underline;
+    }
 
     @media (min-width: 950px) {
       padding: 0 0 20px;
