--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -144,6 +144,7 @@
     color: $c-black;
 
     border: 1px solid $c-gark-green;
+    transition-duration: 400ms;
 
     @media (min-width: 650px) {
       top: 290px;
@@ -172,6 +173,7 @@
       width: 50px;
 
       background-color: $c-gark-green;
+      transition-duration: 400ms;
 
       @media (min-width: 650px) {
         left: 149px;
@@ -246,6 +248,7 @@
 
     &:hover {
       border-bottom: 1px solid $c-black;
+      color: $c-gark-green;
     }
   }
 
