--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -92,6 +92,7 @@
     background-image: url(../images/side-greater-black.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition-duration: 400ms;
 
     &:hover {
       background-color: $c-grey;
