--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -44,6 +44,12 @@
     background-position: center;
     background-size: contain;
     margin-bottom: 43px;
+
+    transition: transform 0.4s ease;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 
   &__link {
@@ -58,6 +64,11 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
+      transition: transform 0.4s ease;
+
+      &:hover {
+        transform: scale(1.5);
+      }
 
     }
 
@@ -69,6 +80,11 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
+      transition: transform 0.4s ease;
+
+      &:hover {
+        transform: scale(1.5);
+      }
     }
   }
 }
@@ -79,7 +95,7 @@
 }
 
 .rota {
-  
+
   &__title {
     font-size: 14px;
     font-weight: 400;
@@ -120,10 +136,14 @@
 
   &__details {
     text-decoration: none;
-    
+
     &-info {
       text-decoration: none;
       color: #000;
+
+      &:hover {
+        color: #f14a27;
+      }
     }
   }
 }
@@ -137,6 +157,10 @@
   &__link {
     text-decoration: none;
     color: #000;
+
+    &:hover {
+      color: #f14a27;
+    }
   }
 }
 
