--- a/src/styles/blocks/revelant.scss
+++ b/src/styles/blocks/revelant.scss
@@ -57,6 +57,11 @@
     height: 520px;
     object-fit: cover;
     object-position: center;
+    transition: transform 0.4s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @media (min-width: 1600px) {
       width: 870px;
@@ -92,7 +97,7 @@
       font-size: 14px;
       font-weight: 500;
       color: #687480;
-      
+
       @media (max-width: 1210px) {
         align-self: center;
       }
@@ -114,7 +119,7 @@
       @media (max-width: 750px) {
         margin-bottom: 10px;
         font-size: 28px;
-      
+
       }
 
       &::after {
