--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -18,7 +18,7 @@
     font-size: 48px;
     font-weight: 700;
     margin-bottom: 60px;
-    
+
     @media (max-width: 1210px) {
       margin-bottom: 50px;
     }
@@ -50,6 +50,11 @@
       object-fit: cover;
       width: 100%;
       height: 100%;
+      transition: transform 0.4s ease;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
 
   }
