--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -33,6 +33,11 @@
       position: absolute;
       top: 0;
       left: 51px;
+      transition: transform 0.4s ease;
+
+      &:hover {
+        transform: scale(1.5);
+      }
     }
   }
 
@@ -93,6 +98,7 @@
     font-size: 20px;
     background-color: #1a5a4c;
     right: -70px;
+    text-decoration: none;
   }
 }
 
