header without menu + first section

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$c-pageBackground: #fff;
+$c-humburIcon: #000;
+$c-darkText: #0f0e08;
+$c-greyText: #4e4e4e;
+$c-lightGreyText: #687480;
+$c-textDate: #1a5a4c;
+$c-squareEvets: #f14a27;
+$c-noActive: #e0e0e0;
