--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "_normalize";
+@import "_reset";
+@import "blocks/button";
+@import "blocks/logo";
+@import "blocks/capital";
+@import "blocks/container";
+@import "blocks/events";
+@import "blocks/description";
