--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "blocks/normalize.scss";
+@import "blocks/header.scss";
 
 body {
   background: $c-gray;
