--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/reset.scss";
+@import "./blocks/burger-menu.scss";
+@import "./blocks/header.scss";
