--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,35 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "blocks/header.scss";
+@import "blocks/form.scss";
+@import "blocks/events.scss";
+@import "blocks/lection.scss";
+@import "blocks/gallery.scss";
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+.page {
+  background-color: $c-gray;
+
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+
+  &__body {
+    margin: 0 auto;
+  }
+
+  &__main {
+    margin-top: 76px;
+    padding: 20px;
+  }
+}
+
+.container {
+  margin-bottom: 70px;
 }
