--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$green: #1a5a4c;
+$dark-brown: #0f0e08;
+$gray: #687480;
+
+$mobile-header-heigth: 320px;
+$mobile-header-width: 320px;
+$header-title-margin: calc(#{$mobile-header-heigth} + 20px);
