--- a/src/styles/blocks/normalize.scss
+++ b/src/styles/blocks/normalize.scss
@@ -2,9 +2,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
 }
 
 html {
-  font-family: "Montserrat", "IBM Plex Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: normal;
 }
