--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -20,9 +20,7 @@
   @media only screen and (max-width: 700px) {
     flex-direction: column-reverse;
     padding: 0;
-    &__title {
-      margin: 20px;
-    }
+    padding-bottom: 70px;
   }
 
   &__burger-logo-container {
@@ -88,8 +86,12 @@
     font-size: 74px;
     line-height: 100%;
     @media only screen and (max-width: 700px) {
+      font-size: 74px;
       margin: 20px 0;
       text-align: center;
+    }
+    @media only screen and (max-width: 550px) {
+      font-size: 45px;
     }
   }
 
@@ -101,6 +103,7 @@
     display: flex;
     @media only screen and (max-width: 700px) {
       height: 50px;
+      width: 280px;
       margin: 0 auto;
       text-align: center;
     }
