--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils.scss";
+@import "./fonts.scss";
+@import "./typography.scss";
+@import "./blocks.scss";
