--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,7 +7,6 @@
   max-width: 1842px;
   width: 100%;
   display: flex;
-  justify-content: flex-end;
   margin: 0 0 0 auto;
   padding: 0 0 0 20px;
   position: relative;
@@ -48,8 +47,8 @@
   }
 
   &__photo {
-    width: 100%;
     max-width: 1244px;
+    width: 100%;
     max-height: 655px;
     object-fit: cover;
     position: relative;
@@ -73,7 +72,7 @@
   }
 
   &__ticket-title-container {
-    margin-left: 177px;
+    margin-left: auto;
     @media only screen and (max-width: 700px) {
       margin: 0 auto;
     }
