--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,257 @@
 @import "utils";
-@import "fonts";
 @import "typography";
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+$colorGren: #1a5a4c;
+$colorBlac: #0f0e08;
+$colorGrey: #4e4e4e;
+
+html {
+  font-family: IBM Plex Sans, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
 body {
-  background: $c-gray;
+  margin: 0;
+  position: relative;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: Montserrat, sans-serif;
+  margin: 0;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+}
+
+.header {
+  background: url(../images/Natsionalnij.jpeg) no-repeat center;
+  background-size: cover;
+  height: 300px;
+  padding: 20px;
+  margin-bottom: 220px;
+
+  
+  &__top {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 240px;
+    min-width: 177px;
+    justify-content: space-between;
+  }
+
+  &__menu {
+    font-family: Montserrat, sans-serif;
+    background: url(../images/Vector.png) no-repeat center;
+    background-size: contain;
+    height: 12px;
+    width: 18px;
+  }
+  
+  &__logo {
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    text-decoration: none;
+    color: black;
+    margin-right: 133px;
+    margin-top: -19px;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+  }
+
+  &__buy {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 70px;
+  }
+
+  &__text {
+    height: 50px;
+    width: 230px;
+    font-size: 16px;
+    line-height: 50px;
+    text-align: center;
+    color: $colorGren;
+    border: 1px solid $colorGren;
+  }
+
+  &__stor {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    background-color: $colorGren;
+  }
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 0;
+
+  &__events {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__title {
+    width: 197px;
+    margin-bottom: 40px;
+  }
+
+  &__foto {
+    display: flex;
+    justify-content: center;
+    background: url(../images/Rectangle3.jpeg) no-repeat center;
+    background-size: cover ;
+    width: 100%;
+    height: 210px;
+    padding-top: 150px;
+    margin-bottom: 197px;
+  }
+
+  &__content {
+    padding: 25px 20px 34px;
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+    width: 278px;
+    height: 154px;
+
+    background-color: #fff;
+    z-index: 2;
+    & :last-child {
+      font-weight: 400;
+      font-size: 28px;
+    }
+  }
+
+  &__contents {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 15px;
+    & :first-child {
+      font-weight: 500;
+      font-size: 16px;
+      color: #687480;
+    }
+
+    & :last-child {
+      text-decoration: none;
+      color: $colorGren;
+      font-size: 16px;
+    }
+  }
+
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
+
+  &__foto {
+    width: 280px;
+    height: 210px;
+    object-fit: fill;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    transition: transform 1s linear;
+
+    @media (min-width: 750px) {
+      &:hover {
+        transform: scale(130%);
+      }
+    }
+  }
+
+  &__date {
+    display: flex;
+    justify-content: space-between;
+    width: 280px;
+    margin-bottom: 10px;
+
+    & :first-child {
+      color: $colorGrey;
+      font-size: 16px;
+    }
+
+    & :last-child {
+      text-decoration: none;
+      color: $colorGren;
+    }
+  }
+
+  &__title {
+    margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 28px;
+  }
+
+  &__content {
+    margin-bottom: 60px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+    color: $colorGrey;
+  }
+}
+
+.footer {
+  height: 5555px;
+}
+
+.gallery {
+  padding: 20px;
+
+  &__title {
+    margin-bottom: 40px;
+  }
+}
+
+.swiper-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  
+}
+
+.swiper-slide img {
+  display: flex;
+  width: 100%;
+  height: 410px;
+  object-fit: contain;
+}
+
+.swiper-pagination-bullet {
+  width: 16px !important;
+  height: 16px !important;
+  display: inline-block;
+  border-radius: 50%;
+  background: #007aff !important;
+  opacity: 0.8 !important;
 }
