--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -252,6 +252,6 @@ h4 {
   height: 16px !important;
   display: inline-block;
   border-radius: 50%;
-  background: #007aff !important;
+  background: $colorGren !important;
   opacity: 0.8 !important;
 }
