--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "typography";
 @import "blocks/normalize.scss";
 @import "blocks/header.scss";
+@import "blocks/content-main.scss";
 
 body {
   background: $c-gray;
