--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,8 @@
-.main-container {
+.main-content {
   border: 1px solid black;
   padding-right: 0;
+  margin-left: auto;
+  max-width: 2000px;
 }
 
 .header {
