--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -10,6 +10,13 @@
     gap: 130px;
   }
 
+  &__container-galery-reverse {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 130px;
+    margin-top: 100px;
+  }
+
   &__galery-image {
     max-width: 670px;
     width: 100%;
