--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -31,4 +31,9 @@
     display: flex;
     gap: 26px;
   }
+
+  &__photo-center {
+    width: 100%;
+    background-image: url("../../images/Rectangle_20.1.png");
+  }
 }
