--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -2,6 +2,7 @@
   max-width: 1570px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 22px;
   border: 1px solid black;
 
   &__container-galery {
@@ -32,8 +33,22 @@
     gap: 26px;
   }
 
+  &__photo-center-container {
+    margin-top: 100px;
+    margin-bottom: 300px;
+    width: 100%;
+    height: 100%;
+    max-height: 674px;
+  }
+
   &__photo-center {
     width: 100%;
-    background-image: url("../../images/Rectangle_20.1.png");
   }
+}
+
+.main__footer-galery {
+  max-width: 1568px;
+  height: 960px;
+  border: 1px solid black;
+  margin-bottom: 200px;
 }
