--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,7 @@
 .main-content {
   border: 1px solid black;
   padding-right: 0;
-  margin-left: auto;
+  margin: 0 auto;
   max-width: 2000px;
 }
 
