--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -48,7 +48,10 @@
 
 .main__footer-galery {
   max-width: 1568px;
-  height: 960px;
+  height: 990px;
   border: 1px solid black;
   margin-bottom: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
