added only header

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./utils/vars";
+@import "./utils/extends";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/reset.scss";
+@import "./blocks/normalize.scss";
+@import "./blocks/header.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/main.scss";
+@import "./blocks/button.scss";
