--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,25 @@
-$c-gray: #eee;
+$maxPageWidth: 1920px;
+$maxWitdhPageCont: 1570px;
+$logoWidth: 63px;
+$logoHeight: 72px;
+$logoWidthMob: 53px;
+$logoHeightMob: 61px;
+$squareEventsHeight: 15px;
+$squareEventsHeightMob: 10px;
+$squareEventsLine-height: 36px;
+$squareEventsLine-heightMob: 28px;
+$lectureCardWidth: 570px;
+$lectureCardWidthMob: 278px;
+$galleryWidthTab: 340px;
+$galleryGapTab: 20px;
+$galleryWidthMob: 280px;
+$galleryGapMob: 16px;
+$main-gray: #eee;
+$back-color: #fff;
+$cburger-color: #000;
+$main-dark: #0f0e08;
+$main-gray: #4e4e4e;
+$main-light-gray: #687480;
+$text-color: #1a5a4c;
+$square-color: #f14a27;
+$shadow-field: inset 1px 1px 15px 1px $text-color;
