--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -1,2 +1,5 @@
-@import "./blocks/footer.scss";
+@import "./blocks/header.scss";
 @import "./blocks/page.scss";
+@import "./blocks/card.scss";
+@import "./blocks/main.scss";
+@import "./blocks/announcement.scss";
