--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
+* {
+  box-sizing: border-box;
+}
+
 @import "./utils.scss";
-@import "./fonts.scss";
-@import "./typography.scss";
 @import "./blocks.scss";
