--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,4 +1,8 @@
 .page {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+
   &__body {
     margin: 0;
     background-color: #fff;
@@ -6,5 +10,11 @@
 
   &__title {
     margin: 0;
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 100%;
+    text-align: center;
+    text-transform: uppercase;
   }
 }
