--- a/src/styles/blocks/announcement.scss
+++ b/src/styles/blocks/announcement.scss
@@ -37,7 +37,8 @@
     position: relative;
     font-weight: 400;
     font-size: 28px;
-    line-height: 36px;
+    line-height: 100%;
     color: #0f0e08;
+    text-align: center;
   }
 }
