--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -52,7 +52,7 @@
 
   &::before {
     position: absolute;
-    content: ">";
+    content: url(../images/Vector-white.svg);
     color: #fff;
     line-height: 300%;
     display: block;
