--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -10,19 +10,21 @@
     color: #0f0e08;
   }
 
-  &__card {
-    margin-bottom: 60px;
+  &__section {
+    margin: 0;
   }
 
   &__middle {
-    &-image {
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 210px;
-      object-fit: fill;
-      object-position: center;
-      z-index: -1;
-    }
+    padding-bottom: 197px;
+  }
+
+  &__image {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 210px;
+    object-fit: fill;
+    object-position: center;
+    z-index: -1;
   }
 }
