added footer ans subscription

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -14,7 +14,7 @@
   }
 }
 
-@mixin buttonHover($_toValue: brightness(120%)) {
+@mixin btnHover($_toValue: brightness(120%)) {
   transition: filter 0.3s;
   &:hover {
     filter: $_toValue;
@@ -68,7 +68,7 @@
   bottom: calc((#{$squareEventsLine-height} / 2 - #{$squareEventsHeight}));
   @include screenMob {
     left: 10px;
-    bottom: calc( #{$squareEventsLine-heightMob} 
+    bottom: calc( #{$squareEventsLine-heightMob}
     / 2 - #{$squareEventsHeightMob});
   }
 }
