--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,3 +11,15 @@
     width: 50px;
   }
 }
+
+.button--foot {
+  color: $text-color;
+  background-color: transparent;
+  background-image: unset ;
+  border: 1px solid $text-color;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 100;
+}
