--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -12,12 +12,12 @@
     transition-duration: 0.3s;
     z-index: 1;
     &::before {
-      @extend .header__button-item;
+      @extend .header__btn-item;
       content: "";
       top: -6px;
     }
     &::after {
-      @extend .header__button-item;
+      @extend .header__btn-item;
       content: "";
       top: 6px;
     }
@@ -39,7 +39,7 @@
       transform: scale(1.3);
     }
     
-    &:hover > .header__button-item {
+    &:hover > .header__btn-item {
       background-color: $text-color;
     }
 
@@ -59,20 +59,20 @@
     display: none;
     margin-left: 50px;
 
-    &:checked ~ .header__button:hover {
+    &:checked ~ .header__btn:hover {
       transform: scale(1.3);
     }
 
-    &:checked ~ .header__button > .header__button-item {
+    &:checked ~ .header__btn > .header__btn-item {
       transform: rotate(45deg);
     }
   
-    &:checked ~ .header__button > .header__button-item::before {
+    &:checked ~ .header__btn > .header__btn-item::before {
       top: 0;
       transform: rotate(0);
     }
   
-    &:checked ~ .header__button > .header__button-item::after {
+    &:checked ~ .header__btn > .header__-item::after {
       top: 0;
       transform: rotate(90deg);
     }
