--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,6 @@
 @import "./blocks/logo.scss";
 @import "./blocks/main.scss";
 @import "./blocks/button.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/container.scss";
+@import "./blocks/subscription.scss";
