--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -41,17 +41,38 @@
     max-height: 674px;
   }
 
+  &__photo-footer-container {
+    margin-top: 200px;
+    width: 100%;
+    height: 100%;
+    max-height: 674px;
+  }
+
   &__photo-center {
     width: 100%;
   }
 }
 
-.main__footer-galery {
-  max-width: 1568px;
-  height: 990px;
+.main-footer {
+  max-width: 1620px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 22px;
   border: 1px solid black;
-  margin-bottom: 200px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
+
+  &__galery {
+    height: 990px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+
+    @media only screen and (max-width: 1620px) {
+      & :nth-child(3),
+      & :nth-child(6) {
+        display: none;
+      }
+    }
+  }
 }
