museum: header, menu

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,73 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%Montserat-logo-text {
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 100%;
+  color: $color-text-primary;
+}
+
+%Montserat-title-text1 {
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  color: $color-text-primary;
+}
+
+%Montserat-title-text2 {
+  @include tablet {
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+    color: white;
+    text-shadow: -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+      1px 1px 0 #000;
+  }
+}
+
+%Montserat-title-text-tablet {
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 100%;
+  color: $color-text-primary;
+  text-align: center;
+}
+
+%Montserat-menu-text {
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 100%;
+  color: $color-text-primary;
+}
+
+%IBM-menu-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
   font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: $color-text-primary;
+}
+
+%icon-style {
+  display: block;
+  text-decoration: none;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+%block-centering-abs {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
