--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,29 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin tablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin wideScreen {
+  @media (min-width: 1600px) {
+    @content;
+  }
+}
+
+@mixin fullHD {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
+
+@mixin largeScreen {
+  @media (min-width: 2560px) {
+    @content;
   }
 }
