--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -41,13 +41,6 @@
     max-height: 674px;
   }
 
-  &__photo-footer-container {
-    margin-top: 200px;
-    width: 100%;
-    height: 100%;
-    max-height: 674px;
-  }
-
   &__photo-center {
     width: 100%;
   }
@@ -74,5 +67,40 @@
         display: none;
       }
     }
+  }
+}
+
+.main-photo-footer {
+  display: flex;
+
+  &__container {
+    background: url(../images/Rectangle_22.1.png) no-repeat center;
+    background-size: cover;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    width: 120%;
+    max-width: 2000px;
+    height: 600px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__title {
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 100%;
+    color: #fff;
+    margin-bottom: 20px;
+  }
+
+  &__subtitle {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 100%;
+    color: #fff;
+    margin-bottom: 66px;
   }
 }
