museum: header, menu

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,4 @@
-$color-text-primary: #fff;
-$color-button-green: #fff;
-$color-text-button: #fff;
+$color-text-primary: #0f0e08;
+$color-button-green: #1a5a4c;
+$color-text-button: #d7dde3;
 $time: 0.5s;
