--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "blocks/header";
+@import "blocks/logo";
+@import "blocks/nav";
+@import "blocks/icon-menu";
+@import "blocks/main_page.scss";
+@import "blocks/reset.scss";
+@import "blocks/tickets.scss";
+@import "blocks/events.scss";
+@import "blocks/lection.scss";
+@import "blocks/gallery.scss";
+@import "blocks/news.scss";
+@import "blocks/footer.scss";
 
 body {
-  background: $c-gray;
+  margin: 0;
+  background-color: $colorWhite;
+}
+
+* {
+  box-sizing: border-box;
 }
