--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,7 @@
 @import "./utils/reset.scss";
 @import "./blocks/burger-menu.scss";
 @import "./blocks/header.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/main.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lection.scss";
