--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-white: #fff;
+$burger-menu-link-color: black;
+$burger-menu-bgc: #f7eebc;
+$header-strongtext-color: black;
+$small-min-width: 320px;
+$small-max-width: 700px;
+$medium-min-width: 701px;
+$medium-max-width: 1200px;
