--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -2,16 +2,16 @@
   box-sizing: border-box;
 }
 
-html {
+.page {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
-.html--active {
+.page--active {
   overflow-y: hidden;
 }
 
-body {
+.page__body {
   background: $c-white;
   margin: 0;
   font-family: "Montserrat", "IBM Plex Sans", sans-serif;
@@ -25,6 +25,13 @@ a {
 ul,
 li {
   list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
 }
 
 input:-webkit-autofill,
