--- a/src/styles/blocks/burger-menu.scss
+++ b/src/styles/blocks/burger-menu.scss
@@ -1,70 +1,42 @@
 .burger-menu {
   font-family: "Montserrat", serif;
-  font-size: 40px;
-  font-style: bold;
+  font-size: 25px;
   font-weight: 700;
-  line-height: 40px;
-  text-align: left;
+  line-height: 25px;
 
   position: fixed;
   margin: 0;
-  padding: 100px 175px;
+  padding: 0 20px;
   height: 100vh;
   width: 100%;
-  background: #f7eebc;
+  background: linear-gradient(to bottom, #fefcea, $burger-menu-bgc);
+  border: 5px ridge rgb(255, 255, 255);
   left: -100%;
-  transition: all 0.5s ease 0s;
+  transition: left 0.5s ease 0s;
 
-  &__item {
-    margin-bottom: 32px;
-    a {
-      color: black;
+  &__link {
+    color: $burger-menu-link-color;
+    transition: transform 0.3s linear;
+
+    &:hover {
+      box-shadow: 2px 1px 10px 2px rgb(94, 137, 255);
+      transform: scale(1.1);
     }
   }
 
-  &__item:hover {
-    text-decoration: underline;
+  &__item {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+
+    &:first-child {
+      margin-top: 140px;
+    }
   }
 }
 
 .burger-menu--active {
   left: 0;
-}
-
-.hamburger {
-  margin-top: 45px;
-  display: flex;
-  position: absolute;
-  top: 0;
-  background-image: url(../images/menu.png);
-  width: 18px;
-  height: 12px;
-}
-
-.hamburger:hover {
-  width: 18px;
-  height: 12px;
-  cursor: pointer;
-  background-image: url(../images/menu-hover.png);
-  background-size: cover;
-}
-
-.hamburger--active {
-  width: 25px;
-  height: 14px;
-  background-image: url(../images/menu-active.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.hamburger--active:hover {
-  width: 25px;
-  height: 14px;
-  background-image: url(../images/menu-active.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  cursor: pointer;
-  z-index: 1;
 }
