add gellery section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,5 @@
 @import "blocks/container";
 @import "blocks/events";
 @import "blocks/description";
+@import "blocks/lecture";
+@import "blocks/gallery";
