--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -97,10 +97,34 @@
   }
 
   &__subtitle {
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 100%;
     color: #fff;
     margin-bottom: 66px;
+  }
+
+  &__input-container {
+    display: flex;
+    
+  }
+
+  &__input {
+    width: 470px;
+    height: 70px;
+    padding: 28px 35px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 100%;
+    margin-right: 30px;
+  }
+
+  &__button {
+    width: 70px;
+    height: 70px;
+    font-size: 24px;
+    line-height: 100%;
+    background-color: #f14a27;
+    border: none;
   }
 }
