--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-@import "_normalize";
 @import "_reset";
+@import "_normalize";
 @import "blocks/button";
 @import "blocks/logo";
 @import "blocks/capital";
@@ -11,3 +11,5 @@
 @import "blocks/description";
 @import "blocks/lecture";
 @import "blocks/gallery";
+@import "blocks/subscription";
+@import "blocks/footer";
