--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -3,6 +3,6 @@
 @import "./blocks/card.scss";
 @import "./blocks/main.scss";
 @import "./blocks/announcement.scss";
-@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/form.scss";
