--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -27,9 +27,29 @@
     font-size: 18px;
     line-height: 150%;
   }
+
+  &__bottom {
+    padding: 50px 20px;
+  }
 }
 
-.container {
-  display: flex;
-  justify-content: space-between;
+.top {
+  &-title {
+    margin: 0 auto;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 36px;
+    line-height: 100%;
+    color: #0f0e08;
+  }
+
+  &-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &-link {
+    display: flex;
+    gap: 24px;
+  }
 }
