--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,13 +41,21 @@ h4 {
 }
 
 .header {
+  position: relative;
   background: url(../images/Natsionalnij.jpeg) no-repeat center;
   background-size: cover;
   height: 300px;
   padding: 20px;
   margin-bottom: 220px;
-
   
+  &__1 {
+    display: none;
+  }
+
+  &__logoss {
+    display: none;
+  }
+
   &__top {
     display: flex;
     flex-direction: row;
@@ -70,7 +78,8 @@ h4 {
     font-size: 30px;
     text-decoration: none;
     color: black;
-    margin-left: 91px;
+    margin: 0 auto;
+    
     margin-top: -19px;
   }
 
@@ -81,6 +90,7 @@ h4 {
   &__buy {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     padding-bottom: 70px;
   }
 
@@ -102,18 +112,120 @@ h4 {
     width: 50px;
     background-color: $colorGren;
   }
+
+  @media (min-width: 768px) {
+    
+    background: none;
+    padding: 0;
+    margin-bottom: 90px;
+    height: 384px;
+    
+    
+
+    &__2 {
+      display: none;
+    }
+
+    &__1 {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      min-width: 768px;
+      height: 384px;
+      margin: 0;
+    }
+
+    &__topss {
+      display: flex;
+      flex-direction: column;
+      padding-left: 34px;
+      padding-top: 45px;
+      min-width: 263px;
+
+    }
+
+    &__foto-topss {
+      height: 384px;
+      width: 100%;
+    }
+
+    &__menuss {
+      position: absolute;
+      font-family: Montserrat, sans-serif;
+      background: url(../images/Vector.png) no-repeat center;
+      background-size: contain;
+      height: 12px;
+      width: 18px;
+    }
+
+    &__logoss {
+      position: absolute;
+      display: flex;
+      font-family: Montserrat, sans-serif;
+      font-weight: bold;
+      font-size: 30px;
+      text-decoration: none;
+      color: black;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    &__titless {
+      position: absolute;
+      font-size: 55px;
+      line-height: 55px;
+      text-align: left;
+      z-index: 2;
+      left: 34px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    &__modss {
+      color: transparent;
+      -webkit-text-stroke-width: 2.5px;
+      -webkit-text-stroke-color: $colorBlac;
+    }
+
+    &__buyss {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      padding-top: 238px;
+      padding-bottom: 70px;
+    }
+  
+    &__textss {
+      height: 50px;
+      width: 150px;
+      font-size: 16px;
+      line-height: 50px;
+      text-align: center;
+      color: $colorGren;
+      border: 1px solid $colorGren;
+    }
+  
+    &__storss {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 50px;
+      width: 50px;
+      background-color: $colorGren;
+    }
+  }
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  
   min-width: 0;
 
   &__events {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 20px;
   }
 
   &__title {
@@ -163,16 +275,19 @@ h4 {
     }
   }
 
+  
+
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 280px;
+  
+  justify-content: center;
+  min-width: 280px;
 
   &__foto {
-    width: 280px;
+    width: 100%;
     height: 210px;
     object-fit: fill;
     border-radius: 8px;
@@ -186,10 +301,18 @@ h4 {
     }
   }
 
+  &__text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 280px;
+  }
+
   &__date {
     display: flex;
     justify-content: space-between;
-    width: 280px;
+    min-width: 280px;
     margin-bottom: 10px;
 
     & :first-child {
@@ -204,9 +327,21 @@ h4 {
   }
 
   &__title {
+    position: relative;
     margin-bottom: 10px;
     font-weight: 400;
     font-size: 28px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      top: 0;
+      right: 0;
+      background-color: $colorRed ;
+      transform: translateY(150%) translateX(200%);
+    }
   }
 
   &__content {
@@ -308,6 +443,12 @@ h4 {
     flex-direction: row;
     width: 124px;
     color: $colorGrey;
+
+    @media (min-width:375px) {
+      & {
+        min-width: 150px;
+      }
+    }
   }
 
   &__top {
@@ -395,6 +536,12 @@ h4 {
     height: 150px;
     padding: 20px;
     margin: 0;
+
+    @media (min-width: 425px) {
+      & {
+        align-content: space-around;
+      }
+    }
   }
 
   &__link {
@@ -465,8 +612,16 @@ h4 {
   height: 16px !important;
   display: inline-block;
   border-radius: 50%;
-  background: $colorGren !important;
+  background: #007aff !important;
   opacity: 0.8 !important;
+}
+
+.img-slider__swiper-pagination {
+  position: relative;
+  transform: translateY(10%);
+  height: 40px;
+  width: 100%;
+  z-index: 1;
 }
 
 input:-webkit-autofill,
@@ -479,4 +634,11 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+
+.swiper-pagination,
+.swiper-pagination-clickable,
+.swiper-pagination-bullets,
+.swiper-pagination-bullets-dynamic {
+  width: 100% !important;
 }
