--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,6 @@
 @import "./blocks/footer.scss";
 @import "./blocks/container.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/events.scss";
+@import "./blocks/description.scss";
+@import "./blocks/lecture.scss";
